--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <header class="cabecalho">
-<h1 class="cabeçalho"></h1>Flower Knows</h1>
-      <ul class="cabeçalho-lista">Como começou tudo </ul>
+<h1="cabeçalho"></h1>Flower Knows</h1>
+      <h2>Como começou tudo </h2>
        <li class="cabeçalho-lista-item">
        </li>
     </ul>
@@ -17,22 +17,9 @@
  <div class= "site"> Desde 1928, a empresa da família Lara produz flores e/ou plantas na rua Galvão Bueno, na Liberdade, em São Paulo. No início, eram principalmente lírios e crisântemos. Quando Antônia Lara funda sua empresa em 1963, ocorre uma grande mudança. A empresa cresce a ponto de se tornar a mais importante produtora de flores de São Paulo. Antônia e Antônio Gomes seu atual esposo e dono de uma pequena floricultura, chamada "Dengo de Flor". Entre eles e suas empresas surge uma grande afinidade. Essa colaboração bem-sucedida propicia que, na década de 80, as empresas sejam unidas, convertendo-se na atual Flower Knows.
 
     <img class="imagem" src="floricultura.jpg" alt="logo.png"></div>
-    <h1 class="site"> As mais pedidas</h1>
-<ul class= "lista-item">
-  <a href="https://www.mercadobitcoin.com.br/criptomoedas/ethereum"><li class="lista-
-item">&#9734 Etherum</li></a><img class="imagem-bit" src="eterum.PNG" alt="Etherum">
-  <a href="https://www.infomoney.com.br/cotacoes/cripto/ativo/ethereum-eth/"> <li class="lista-
-item">&#9734 Bitcoin</li></a>
-<img class="imagem-bit' src="bitcoin.PNG alt="bitcoin">
-  <a href="https://www.mercadobitcoin.com.br/criptomoedas/solana"><li class="lista-
-itemn">&#9734 Solana</li><la>
-    <img class="imagem-bit" src="solana.PNG" alt="solana"> 29
-    <li class="lista-item">&#9734 Tether</li>
-<img class="imagem-bit'" src="tether.PNG" alt="Tether">
-<li class="lista-item">&#9734 XRP</li> <img class="imagem-bit" src="xrp.PNG" alt="XRP">
-
-<ul>
-</body>
-</html>
-<img class="body" src="" alt="" srcset="">
+ 
+    <h1 class="site"> As flores que mais trabalhamos:</h1>
+    <ul class= "lista-item">
+      <a href="https://menufloresflowerknows.my.canva.site/"><li class="lista-
+         item">Menu de flores 🌸</li>  
 
